--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "ethers": "^5.7.0",
+    "ipfs-core": "^0.15.4",
+    "orbit-db": "^0.28.7",
+    "orbit-db-identity-provider": "^0.4.0",
+    "path": "^0.12.7",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "util": "^0.12.4",
     "vue": "^2.6.14"
   },
   "devDependencies": {
@@ -17,8 +25,10 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "buffer": "^6.0.3",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "stream-browserify": "^3.0.0",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
